# test-release-please

./: .release-please-manifest.json  CHANGELOG.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
