[tool.poetry]
name = "test-release-please"
version = "2.1.0-rc.1"
description = ""
authors = ["dinjazelena <pavletabandzelic0111@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
